--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="channel_name">頻道名稱</string>
-    <string name="channel_options">頻道選項</string>
+    <string name="channel_name">频道名称</string>
+    <string name="channel_options">频道选项</string>
     <string name="qr_code">QR 码</string>
-    <string name="unset">取消設定</string>
-    <string name="connection_status">連線狀態</string>
-    <string name="application_icon">應用程式圖示</string>
+    <string name="unset">取消设定</string>
+    <string name="connection_status">联机状态</string>
+    <string name="application_icon">应用程序图标</string>
     <string name="unknown_username">未知的使用者名称</string>
     <string name="send">传送</string>
     <string name="send_text">传送讯息</string>
@@ -14,7 +14,7 @@
     <string name="your_name">你的名称</string>
     <string name="analytics_okay">匿名使用统计信息和故障报告</string>
     <string name="looking_for_meshtastic_devices">正在寻找 Meshtastic 装置...</string>
-    <string name="starting_pairing">開始配對</string>
+    <string name="starting_pairing">开始配对</string>
     <string name="url_for_join">加入 Meshtastic 网状网络的 URL</string>
     <string name="accept">接受</string>
     <string name="cancel">取消</string>
@@ -24,22 +24,22 @@
     <string name="do_you_want_switch">您要切换到 \'%s\' 频道吗？</string>
     <string name="permission_missing">Meshtastic 需要位置权限并启用位置信息才能通过蓝牙查找新设备。找到之后可以再关闭这权限。</string>
     <string name="radio_sleeping">无法更改频道，因为无线电处于休眠状态</string>
-    <string name="report_bug">報告BUG</string>
+    <string name="report_bug">报告BUG</string>
     <string name="report_a_bug">回报问题</string>
     <string name="report_bug_text">您确定要报告错误吗？报告后，请在 meshtastic.discourse.group 上贴文，以便我们可以将报告与您发现的问题匹配。</string>
-    <string name="report">報告</string>
-    <string name="not_paired_yet">您還沒有配對.</string>
-    <string name="change_radio">換設備</string>
-    <string name="pairing_completed">配對完成，開始服務</string>
-    <string name="pairing_failed_try_again">配對失敗，請重新選擇</string>
-    <string name="location_disabled">位置訪問已關閉,無法向設備提供位置.</string>
+    <string name="report">报告</string>
+    <string name="not_paired_yet">您还没有配对.</string>
+    <string name="change_radio">换设备</string>
+    <string name="pairing_completed">配对完成，开始服务</string>
+    <string name="pairing_failed_try_again">配对失败，请重新选择</string>
+    <string name="location_disabled">位置访问已关闭,无法向设备提供位置.</string>
     <string name="share">分享</string>
-    <string name="disconnected">已中斷連線</string>
-    <string name="device_sleeping">設備休眠中</string>
+    <string name="disconnected">已中断联机</string>
+    <string name="device_sleeping">设备休眠中</string>
     <string name="connected_count">已连接：%1$s 的 %2$s 上线</string>
-    <string name="list_of_nodes">網絡中的節點列表</string>
-    <string name="update_firmware">更新韌體</string>
-    <string name="connected">連接到設備</string>
+    <string name="list_of_nodes">网络中的节点列表</string>
+    <string name="update_firmware">更新固件</string>
+    <string name="connected">连接到设备</string>
     <string name="connected_to">已连接至设备 (%s)</string>
     <string name="not_connected">尚未联机</string>
     <string name="connected_sleeping">已连接至设备，但设备正在休眠中</string>
@@ -47,14 +47,14 @@
     <string name="app_too_old">需要更新应用程序</string>
     <string name="must_update">您必须在应用商店（或 Github）上更新此应用程序。程序太旧了以至于无法与此装置进行通讯。 请阅读有关此主题的 <a href="https://meshtastic.org/docs/software/android/installation">文件</a>。</string>
     <string name="none">无 （停用）</string>
-    <string name="modem_config_short">短距離（速度快）</string>
+    <string name="modem_config_short">短距离（速度快）</string>
     <string name="modem_config_medium">中等距离（速度快）</string>
     <string name="modem_config_long">长距离（速度快）</string>
     <string name="modem_config_very_long">远距离（速度慢）</string>
     <string name="modem_config_unrecognized">无法识别</string>
     <string name="meshtastic_service_notifications">服务通知</string>
     <string name="location_disabled_warning">您必须在设置中开启高精度定位服务</string>
-    <string name="about">關於</string>
+    <string name="about">关于</string>
     <string name="a_list_of_nodes_in_the_mesh">节点列表</string>
     <string name="text_messages">短信</string>
     <string name="channel_invalid">此频道网址无效，无法使用</string>
@@ -68,58 +68,58 @@
     <string name="message_reception_state">消息接收状态</string>
     <string name="message_delivery_status">消息传递状态</string>
     <string name="meshtastic_messages_notifications">消息通知</string>
-    <string name="protocol_stress_test">協定壓力測試</string>
-    <string name="firmware_too_old">需要韧体更新</string>
+    <string name="protocol_stress_test">协议压力测试</string>
+    <string name="firmware_too_old">需要更新</string>
     <string name="firmware_old">版本过旧，无法与此应用程序通讯。请前往设定面板并选择「更新韧体」。欲了解更多信息，请参阅 Github 上的<a href="https://meshtastic.org/docs/getting-started/flashing-firmware">韧体安装指南</a>。</string>
     <string name="okay">好的</string>
     <string name="must_set_region">您必须先选择一个地区</string>
-    <string name="region">地區</string>
+    <string name="region">地区</string>
     <string name="cant_change_no_radio">无法更改频道，因为装置尚未连接。请再试一次。</string>
-    <string name="save_messages">匯出  範圍測試.csv</string>
+    <string name="save_messages">汇出  范围测试.csv</string>
     <string name="reset">重置</string>
     <string name="scan">扫描</string>
     <string name="are_you_sure_change_default">您是否确定要改回默认频道？</string>
     <string name="reset_to_defaults">恢复预设设置</string>
     <string name="apply">申请</string>
     <string name="no_app_found">找不到可用于发送 URL 的应用程序。</string>
-    <string name="theme">主題</string>
+    <string name="theme">主题</string>
     <string name="theme_light">浅色</string>
     <string name="theme_dark">深色</string>
-    <string name="theme_system">系統預設</string>
-    <string name="choose_theme">選擇主題</string>
+    <string name="theme_system">系统默认</string>
+    <string name="choose_theme">选择主题</string>
     <string name="background_required">背景定位</string>
     <string name="why_background_required">使用此功能，您必须授予「一直允许」的位置权限选项。\n这允许 Meshtastic 读取您的智能手机位置，并在应用程序关闭或未使用时，将位置发送给网状网络中的其他成员。</string>
     <string name="required_permissions">所需权限：</string>
-    <string name="provide_location_to_mesh">提供網格的位置</string>
+    <string name="provide_location_to_mesh">提供网格的位置</string>
     <string name="camera_required">相机权限</string>
     <string name="why_camera_required">我们必须获得访问摄像头的权限才能读取 QR 码。不会保存任何图片或影片。</string>
-    <string name="modem_config_slow_short">短距離（速度慢）</string>
-    <string name="modem_config_slow_medium">中等距離（速度慢）</string>
+    <string name="modem_config_slow_short">短距离（速度慢）</string>
+    <string name="modem_config_slow_medium">中等距离（速度慢）</string>
     <plurals name="delete_messages">
         <item quantity="other">删除 %s 讯息?</item>
     </plurals>
     <string name="delete">删除</string>
     <string name="delete_for_everyone">也从所有人的聊天纪录中删除</string>
-    <string name="delete_for_me">從我的聊天紀錄中刪除</string>
-    <string name="select_all">選擇全部</string>
+    <string name="delete_for_me">从我的聊天纪录中删除</string>
+    <string name="select_all">选择全部</string>
     <string name="modem_config_slow_long">长距离（速度慢）</string>
     <string name="map_style_selection">样式选择</string>
     <string name="map_download_region">下载区域</string>
-    <string name="name">名稱</string>
-    <string name="description">描述說明</string>
-    <string name="locked">鎖定</string>
-    <string name="save">儲存</string>
-    <string name="preferences_language">語言</string>
-    <string name="preferences_system_default">系統預設</string>
-    <string name="resend">重新傳送</string>
-    <string name="shutdown">關機</string>
-    <string name="reboot">重新開機</string>
-    <string name="intro_show">顯示介紹指南</string>
-    <string name="intro_welcome">歡迎來到 Meshtastic</string>
+    <string name="name">名称</string>
+    <string name="description">描述说明</string>
+    <string name="locked">锁定</string>
+    <string name="save">储存</string>
+    <string name="preferences_language">语言</string>
+    <string name="preferences_system_default">系统默认</string>
+    <string name="resend">重新传送</string>
+    <string name="shutdown">关机</string>
+    <string name="reboot">重新启动</string>
+    <string name="intro_show">显示介绍指南</string>
+    <string name="intro_welcome">欢迎来到 Meshtastic</string>
     <string name="intro_welcome_text">Meshtastic 是一个开源、离网、加密的通讯平台。Meshtastic 无线电组成网状网络，使用 LoRa 协议传送文字讯息进行通讯。</string>
-    <string name="intro_started">…讓我們開始吧！</string>
-    <string name="intro_started_text">使用藍牙、序列埠或 WiFi 連接您的 Meshtastic 設備。 \n\n您可以在 www.meshtastic.org/docs/hardware 查看兼容的設備</string>
-    <string name="intro_encryption">"設置加密"</string>
+    <string name="intro_started">…让我们开始吧！</string>
+    <string name="intro_started_text">使用蓝牙、串行端口或 WiFi 连接您的 Meshtastic 设备。 \n\n您可以在 www.meshtastic.org/docs/hardware 查看兼容的设备</string>
+    <string name="intro_encryption">"设置加密"</string>
     <string name="intro_encryption_text">作为标准，设置了默认加密密钥。 要启用您自己的频道和增强加密，请转到频道选项卡并更改频道名称，这将为 AES256 加密设置一个随机密钥。 \n\n要与其他设备通信，他们需要扫描您的二维码或点击共享链接来配置频道设置。</string>
     <string name="message">讯息:</string>
     <string name="quick_chat">快速聊天选项</string>
